--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="148"
-    android:viewportHeight="148"> <!-- Increased to add 10dp padding on each side -->
+    android:viewportHeight="148">
 
 <path
 android:fillColor="#0000FF"
 android:pathData="M 55,100
                           m -8,0
                           a 8,8 0 1,1 16,0
-                          a 8,8 0 1,1 -16,0" /> <!-- Translated to new position -->
+                          a 8,8 0 1,1 -16,0" />
 <path
 android:fillColor="#0000FF"
 android:pathData="M95,100
                           m -8,0
                           a 8,8 0 1,1 16,0
-                          a 8,8 0 1,1 -16,0" /> <!-- Translated to new position -->
+                          a 8,8 0 1,1 -16,0" />
     </vector>
